commit changes to cloud

--- a/dashboard_App/src/app/Components/side-navigation/side-navigation.component.html
+++ b/dashboard_App/src/app/Components/side-navigation/side-navigation.component.html
@@ -1,1 +1,25 @@
-<p>side-navigation works!</p>
+<div class="sidebar">
+    <div class="flex-column">
+        <div>
+            <a href=""></a>
+        </div>
+        <div>
+            <a href=""></a>
+        </div>
+        <div>
+            <a href=""></a>
+        </div>
+        <div>
+            <a href=""></a>
+        </div>
+        <div>
+            <a href=""></a>
+        </div>
+        <div>
+            <a href=""></a>
+        </div>
+        <div>
+            <a href=""></a>
+        </div>
+    </div>
+</div>
