commit all changes

--- a/dashboard_App/src/app/Components/side-navigation/side-navigation.component.html
+++ b/dashboard_App/src/app/Components/side-navigation/side-navigation.component.html
@@ -1,25 +1,38 @@
 <div class="sidebar">
     <div class="flex-column">
-        <div>
-            <a href=""></a>
+        <div class="side_icons m-3">
+            <button class="btn btn-light shadow ms-1"><i class="fa-solid fa-circle"></i></button>
         </div>
-        <div>
-            <a href=""></a>
+        <div class="side_icons mx-3 my-2">
+            <a href="" class="px-2"><i class="fa-solid fa-house-user"></i></a>
         </div>
-        <div>
-            <a href=""></a>
+        <div class="side_icons mx-3 my-2">
+            <a href="" class="px-2"><i class="fa-solid fa-chart-column"></i></a>
         </div>
-        <div>
-            <a href=""></a>
+        <div class="side_icons mx-3 my-2">
+            <a href="" class="px-2"><i class="fa-solid fa-layer-group"></i></a>
         </div>
-        <div>
-            <a href=""></a>
+        <div class="side_icons mx-3 my-2">
+            <a href="" class="px-2"><i class="fa-solid fa-check-to-slot"></i></a>
         </div>
-        <div>
-            <a href=""></a>
+        <div class="side_icons mx-3 my-2">
+            <a href="" class="px-2"><i class="fa-solid fa-chart-pie"></i></a>
         </div>
-        <div>
-            <a href=""></a>
+        <div class="side_icons mx-3 my-2">
+            <a href="" class="px-2"><i class="fa-solid fa-user-group"></i></a>
+        </div>
+    </div>
+
+    <div class="flex-column icon_position">
+        <div class="side_icons mx-3 my-2">
+            <a href="" class="px-2"><i class="fa-solid fa-house-user"></i></a>
+        </div>
+        <div class="side_icons mx-3 my-2">
+            <a href="" class="px-2"><i class="fa-solid fa-gear"></i></a>
+        </div>
+        <div class="side_icons mx-3 my-2">
+            <!-- <a href="" class="px-2"><i class="fa-solid fa-gear"></i></a> -->
+            <img src="assets/images/836.jpg" alt="">
         </div>
     </div>
 </div>
