--- a/dashboard_App/src/app/Components/side-navigation/side-navigation.component.scss
+++ b/dashboard_App/src/app/Components/side-navigation/side-navigation.component.scss
@@ -3,3 +3,13 @@
     height: 100%;
     background-color: #f1f1f1;
 }
+.sidebar .side_icons a{
+    font-size: 22px;
+}
+.icon_position{
+    position: fixed;
+    bottom: 0;
+}
+// .sidebar .side_icons i{
+//     color: #878585;
+// }
