commit new changes

--- a/dashboard_App/src/app/Components/side-navigation/side-navigation.component.scss
+++ b/dashboard_App/src/app/Components/side-navigation/side-navigation.component.scss
@@ -10,6 +10,10 @@
     position: fixed;
     bottom: 0;
 }
+.side_icons img{
+    width: 50px;
+    height: auto;
+}
 // .sidebar .side_icons i{
 //     color: #878585;
 // }
